--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,20 +27,18 @@
             border-radius: 10px;
         }
 
-        main {
-            margin-top: 4rem;
-        }
-
         .navbar {
-            height: 4rem;
+            height: 5rem;
             width: 100vw;
             top: 0;
-
+            display: flex;  
+            background-color: var(--bg-primary);
+            position: relative; /* Make this the reference for absolute positioning */
         }
 
         .nav-link {
             text-decoration: none;
-            width: 4rem;
+            width: 5rem;
             color: var(--text-primary);
             display: flex;
             flex-direction: column;
@@ -49,38 +47,42 @@
         }
 
         .navbar-nav {
+            width: 100%;
             list-style: none;
-            padding: 0;
+            padding: 3px 1rem;
             margin: 0;
             display: flex;
             flex-direction: row-reverse;
-            padding: 0 1rem;
+            transition: height 0.3s ease; /* Smoothly transitions height */
         }
 
-        .navbar-nav .icon {
-            align-items: center;
+        .nav-item {
+            width: 5rem;
         }
+
+        .nav-item:last-child {
+            margin-right: auto; /* Ensure other items are unaffected */
+            position: absolute; /* Fix position within the navbar-nav */
+            top: 2;             /* Align to the top */
+            left: 0;            /* Align to the left */
+        }   
 
         .nav-item {
             height: 100%;
         }
 
-        .nav-item:last-child {
-            margin-right: auto;
-        }
-
         .link-text {
+            padding-top: 0.5rem;
             display: none;
         }
 
         .icon {
             font-size: 2rem;
-            min-height: 2rem;
             color: var(--text-primary)
         }
 
         .navbar:hover {
-            height: 6rem;
+            height: 8rem;
         }
 
         .navbar:hover #link-text-padding {
@@ -88,12 +90,10 @@
         }
 
         .navbar:hover .link-text {
-            padding-top: 0.5rem;
             display: block;
         }
 
         h1 {
-            padding-top: 3rem;
             text-align: center;
         }
 
