--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
 
             <li class="nav-item"> 
                 <a href="#" class="nav-link">
-                    <div class="icon"><i class="fa-solid fa-user-ninja"></i></div>
+                    <div class="icon"></div>
                     <span class="link-text"> Login </span> 
                 </a>
             </li>
@@ -36,14 +36,14 @@
             <li class="nav-item"> 
                 <a href="#" class="nav-link">
                     <div class="icon"><i class="fa-solid fa-user-ninja"></i></div>
-                    <span class="link-text"> Login </span> 
+                    <span class="link-text"> Register </span> 
                 </a>
             </li>
 
             <li class="nav-item"> 
                 <a href="#" class="nav-link">
-                    <div class="icon"><i class="fa-solid fa-user-plus"></i></div>
-                    <span id="link-text-padding" class="link-text"> Register </span> 
+                    <div class="icon"><i class="fa-brands fa-napster"></i></div>
+                    <span id="link-text-padding" class="link-text"> Login </span> 
                 </a>
             </li>
 
@@ -59,15 +59,6 @@
 
 
     <main>
-        <h1> Spotify Api </h1>
-
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            
-            Laborum quod ullam, explicabo, placeat architecto ut magni cum eius animi possimus tenetur, eWhat is Lorem Ipsum?
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-            </p>
-
         {% block main %}{% endblock %}
     </main>
 
