--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,12 @@
 {% block title %}Test{% endblock %}
 
 {% block main %}    
-    <div> Hi </div>
+
+        <div class="container_main glass">
+            <div class="contain-text">
+                <h1 id="title"> How well do you know your <span style="color: #1DB954;"> Spotify </span><span style="color: var(--text-primary);"> playlist </span> </h1>
+            </div>
+        </div>
+
 {% endblock %}
+
