--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,23 @@
 
 {% block main %}    
 
+        <section class="carrousel">
+            <div class="slider-wrap">
+                <div class="slider">
+                    <img id="slide1" src="{{ url_for('static', filename='images/spotify_list.jpg') }}" alt="Playlist Spotify">
+
+                    <img id="slide2" src="{{ url_for('static', filename='images/spotify_liked.jpg') }}" alt="Like playlist Spotify">
+
+                    <img id="slide3" src="{{ url_for('static', filename='images/spotify_lyrics.jpg') }}" alt="Lyrics Spotify">
+                </div>
+                <div class="slider-nav">
+                    <a href="#slide1"></a>
+                    <a href="#slide2"></a>
+                    <a href="#slide3"></a>
+                </div>
+            </div>
+        </section>
+
         <div class="container_main glass">
             <div class="contain-text">
                 <h1 id="title"> How well do you know your <span style="color: #1DB954;"> Spotify </span><span style="color: var(--text-primary);"> playlist </span> </h1>
