improve navbar still need to fix the height not taking the expect size

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             </div>
         </section>
 
-        <div class="container_main glass">
+        <div class="container_box glass">
             <div class="contain-text">
                 <h1 id="title"> How well do you know your <span style="color: #1DB954;"> Spotify </span><span style="color: var(--text-primary);"> playlist </span> </h1>
             </div>
