--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -19,6 +19,11 @@
             position: relative;
         }
 
+        /* set margin of size of nav*/
+        main {
+            margin-top: 4rem;
+        }
+
         /* Change width of the default scrollbar */
         body::-webkit-scrollbar {
             width: 1rem;
@@ -35,24 +40,24 @@
 
          /* Set a fix navbar with bottom border  */
         .navbar {
-            height: 4rem;
+            height: 6rem;
             width: 100vw;
             top: 0;
             position: fixed;
             background-color: var(--bg-secondary);
-            border-bottom: 0.1rem solid rgba(255, 255, 255, 0.1);
+            border-bottom: 0.1rem solid rgba(92, 90, 90, 0.1);
             box-sizing: border-box; /* Ensures the border is included in the total size */
             display: flex; /* Use flexbox for centering */
             align-items: flex-start; /* Vertically center items */
-            padding-top: 0.5rem;
-            transition: height 0.4s ease-in, border-bottom 0.4s ease-in; /* Adds smooth transition */
+            padding-top: 1rem;
+            transition: height 0.3s ease-in, border-bottom 0.3s ease-in; /* Adds smooth transition */
             overflow: hidden;
         }
 
          /* remove decoration set the item to be square size 4rem navbar is 4rem*/
         .nav-link {
             text-decoration: none;
-            width: 4rem;
+            width: 6rem;
             color: var(--text-primary);
             display: flex;
             flex-direction: column;
@@ -69,8 +74,8 @@
         }
         
         .icon {
-            font-size: 2rem;
-            min-height: 2rem;
+            font-size: 3rem;
+            min-height: 3rem;
             color: var(--text-secondary);
         }
 
@@ -95,30 +100,29 @@
 
         /* When hover the height of navbar change and the text is display below the icon*/
         .navbar:hover {
-            height: 6rem;
+            height: 7.9rem;
             border-bottom: 0.1rem solid rgba(255, 255, 255, 0.33);
             position: fixed; 
         }
 
 
         .navbar:hover .link-text {
-            margin-top: 0.5rem;
+            margin-top: 0.6rem;
             display: block;
         }
         
         /* Contain the glass item*/
         .container_main {
             position: absolute;
-            top: 80%; 
+            top: 40%; 
             left: 50%;
             transform: translate(-50%, -50%); 
-            width: 30%;
-            max-width: 600px;
+            width: 50%;
+            max-width: 800px;
             height: auto;   
             display: flex;
             align-items: center;
             justify-content: center;
-            transition: margin 0.3s ease-in;
         }
 
         /* Make the box 'glass' alike trnasparant*/
@@ -128,9 +132,9 @@
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
             border-radius: 20px;
-            border: 1px solid rgba(255, 255, 255, 0.4);
-            box-shadow: 0 4px 15px rgba(255, 255, 255, 0.3), 
-                        inset 0 1px 3px rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(0, 0, 0, 0.4);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3), 
+                        inset 0 1px 3px rgba(255, 255, 255, 0.9);
             background-blend-mode: overlay;
         }
 
@@ -145,29 +149,52 @@
             line-height: 1.5;
         }
 
-        main {
-            margin-top: 4rem;
-        }
 
-
-        /* Carousel style */
+        /* Carousel style base on SKillthrive video "https://www.youtube.com/@Skillthrive" */
         .carrousel {
             width: 100vw; /* Full viewport width */
-            height: 35vh; /* 25% of the viewport height */
-            left: 0;
-            display: absolute; /* Center images */
+            height: 25%; /* 25% of the viewport height */ 
         }
 
         .slider-wrapper {
             position: relative;
             width: 100%;
-            height: auto;
         }
 
         .slider {
-            width: 100%; 
-            height: auto;
-            aspect-ratio: 16 / 9;
             display: flex;
+            aspect-ratio: 16 / 9;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
+            box-shadow: 0 1.5rem 3rem -0.75rem hsla(0%, 0%, 0%, 0.25);
         }
 
+        .slider img {
+            flex: 1 0 100%;
+            scroll-snap-align: start;
+            object-fit: cover;
+        }
+
+        .slider-nav {
+            display: flex;
+            column-gap: 1rem;
+            position: absolute;
+            bottom: 1.25rem;
+            left: 50%;
+            transform: translateX(-50%)
+            z-index: 1; 
+        }
+
+        .slider-nav a {
+            width: 0.5rem;
+            height: 0.5rem;
+            border-radius: 50%;
+            background-color: #fff;
+            opacity: 0.75;
+            transition: opacity ease 250ms;
+        }
+
+        .slider-nav a:hover {
+            opacity: 1;
+        }
