carrousel, nav, glass-box setup correctly

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block main %}    
 
-        <section class="carrousel">
+        <div class="carrousel">
             <div class="slider-wrap">
                 <div class="slider">
                     <img id="slide1" src="{{ url_for('static', filename='images/spotify_list.jpg') }}" alt="Playlist Spotify">
@@ -19,11 +19,11 @@
                     <a href="#slide3"></a>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <div class="container_box glass">
+        <div class="container_main glass">
             <div class="contain-text">
-                <h1 id="title"> How well do you know your <span style="color: #1DB954;"> Spotify </span><span style="color: var(--text-primary);"> playlist </span> </h1>
+                <h1 id="title"> How well do you know your <span style="color: #1DB954;"> Spotify </span><span style="color: #2C3E50;"> Playlist </span> </h1>
             </div>
         </div>
 
