--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,12 +16,17 @@
             background-color: var(--bg-secondary);  /* change to a nice animated background subtil ? */
             margin: 0;
             padding: 0;
-            position: relative;
         }
 
         /* set margin of size of nav*/
         main {
-            margin-top: 4rem;
+            position: relative;
+            margin-top: 5.5rem;
+        }
+
+        .body, main {
+            position: relative;
+            z-index: 0;
         }
 
         /* Change width of the default scrollbar */
@@ -40,7 +45,7 @@
 
          /* Set a fix navbar with bottom border  */
         .navbar {
-            height: 6rem;
+            height: 5.5rem;
             width: 100vw;
             top: 0;
             position: fixed;
@@ -50,14 +55,15 @@
             display: flex; /* Use flexbox for centering */
             align-items: flex-start; /* Vertically center items */
             padding-top: 1rem;
-            transition: height 0.3s ease-in, border-bottom 0.3s ease-in; /* Adds smooth transition */
+            transition: height 0.4s ease-in;
             overflow: hidden;
+            z-index: 10000;
         }
 
          /* remove decoration set the item to be square size 4rem navbar is 4rem*/
         .nav-link {
             text-decoration: none;
-            width: 6rem;
+            width: 5.5rem;
             color: var(--text-primary);
             display: flex;
             flex-direction: column;
@@ -100,26 +106,25 @@
 
         /* When hover the height of navbar change and the text is display below the icon*/
         .navbar:hover {
-            height: 7.9rem;
+            height: 7.5rem;
             border-bottom: 0.1rem solid rgba(255, 255, 255, 0.33);
             position: fixed; 
         }
 
-
         .navbar:hover .link-text {
-            margin-top: 0.6rem;
+            margin-top: 0.59rem;
             display: block;
         }
         
         /* Contain the glass item*/
         .container_main {
             position: absolute;
-            top: 40%; 
+            top: 50%; 
             left: 50%;
-            transform: translate(-50%, -50%); 
-            width: 50%;
-            max-width: 800px;
-            height: auto;   
+            transform: translate(-50%, -50%);
+            width: auto; 
+            max-width: 40rem;
+            z-index: 10000; 
             display: flex;
             align-items: center;
             justify-content: center;
@@ -127,33 +132,37 @@
 
         /* Make the box 'glass' alike trnasparant*/
         .glass {
-            width: 100%; 
             background: linear-gradient(135deg, rgba(2, 2, 2, 0.2), rgba(30, 31, 31, 0.1));
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
             border-radius: 20px;
             border: 1px solid rgba(0, 0, 0, 0.4);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3), 
-                        inset 0 1px 3px rgba(255, 255, 255, 0.9);
-            background-blend-mode: overlay;
+                        inset 0 1px 3px rgba(255, 255, 255, 0.9);   
+            padding: 1rem;
+            width: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
 
         .contain-text {
             font-size: 13pt; /* Adjust the size as needed */
             font-weight: bold; 
-            text-align: center; 
-            align-items: center;
-            margin: 0; 
-            margin: 0.9rem;
+            text-align: center;
             line-height: 1.5;
+            color: #fff;
         }
 
 
         /* Carousel style base on SKillthrive video "https://www.youtube.com/@Skillthrive" */
         .carrousel {
             width: 100vw; /* Full viewport width */
-            height: 25%; /* 25% of the viewport height */ 
+            height: 50vh; /* 25% of the viewport height */ 
+            position: relative;
+            overflow: hidden;
+            z-index: 1;
         }
 
         .slider-wrapper {
@@ -171,10 +180,17 @@
         }
 
         .slider img {
-            flex: 1 0 100%;
+            height: 100%;
             scroll-snap-align: start;
             object-fit: cover;
+            opacity: 0.6;
+            transition: opacity ease 250ms;
         }
+
+        .slider img:hover {
+            opacity: 0.9; /* Reset opacity when hovered */
+        }
+        
 
         .slider-nav {
             display: flex;
@@ -182,7 +198,7 @@
             position: absolute;
             bottom: 1.25rem;
             left: 50%;
-            transform: translateX(-50%)
+            transform: translateX(-50%);
             z-index: 1; 
         }
 
@@ -192,6 +208,7 @@
             border-radius: 50%;
             background-color: #fff;
             opacity: 0.75;
+            pointer-events: none;
             transition: opacity ease 250ms;
         }
 
