--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,15 +18,9 @@
             padding: 0;
         }
 
-        /* set margin of size of nav*/
+        /* set margin of size of navbar*/
         main {
-            position: relative;
             margin-top: 5.5rem;
-        }
-
-        .body, main {
-            position: relative;
-            z-index: 0;
         }
 
         /* Change width of the default scrollbar */
@@ -50,12 +44,12 @@
             top: 0;
             position: fixed;
             background-color: var(--bg-secondary);
-            border-bottom: 0.1rem solid rgba(92, 90, 90, 0.1);
+            border-bottom: 0.1rem solid rgba(142, 142, 142, 0.33);
             box-sizing: border-box; /* Ensures the border is included in the total size */
-            display: flex; /* Use flexbox for centering */
-            align-items: flex-start; /* Vertically center items */
+            display: flex; 
+            align-items: flex-start; 
             padding-top: 1rem;
-            transition: height 0.4s ease-in;
+            transition: height 0.4s ease-in, opacity ease 250ms;
             overflow: hidden;
             z-index: 10000;
         }
@@ -92,6 +86,7 @@
             margin: 0;
             display: flex;
             flex-direction: row-reverse;  /* Reverse direction of the row  */
+            align-items: center;
         }
 
         /* Push last item to the opposite side by settings his margin to the max */
@@ -107,8 +102,7 @@
         /* When hover the height of navbar change and the text is display below the icon*/
         .navbar:hover {
             height: 7.5rem;
-            border-bottom: 0.1rem solid rgba(255, 255, 255, 0.33);
-            position: fixed; 
+            border-bottom: 0.1rem solid rgba(255, 255, 255, 0.4);
         }
 
         .navbar:hover .link-text {
@@ -116,53 +110,15 @@
             display: block;
         }
         
-        /* Contain the glass item*/
-        .container_main {
-            position: absolute;
-            top: 50%; 
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: auto; 
-            max-width: 40rem;
-            z-index: 10000; 
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        /* Make the box 'glass' alike trnasparant*/
-        .glass {
-            background: linear-gradient(135deg, rgba(2, 2, 2, 0.2), rgba(30, 31, 31, 0.1));
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            border-radius: 20px;
-            border: 1px solid rgba(0, 0, 0, 0.4);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3), 
-                        inset 0 1px 3px rgba(255, 255, 255, 0.9);   
-            padding: 1rem;
-            width: auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-
-        .contain-text {
-            font-size: 13pt; /* Adjust the size as needed */
-            font-weight: bold; 
-            text-align: center;
-            line-height: 1.5;
-            color: #fff;
-        }
-
 
         /* Carousel style base on SKillthrive video "https://www.youtube.com/@Skillthrive" */
         .carrousel {
+            position: relative;
             width: 100vw; /* Full viewport width */
             height: 50vh; /* 25% of the viewport height */ 
-            position: relative;
             overflow: hidden;
             z-index: 1;
+            border-bottom: 0.1rem solid rgba(142, 142, 142, 0.33);
         }
 
         .slider-wrapper {
@@ -181,6 +137,7 @@
 
         .slider img {
             height: 100%;
+            width: auto;
             scroll-snap-align: start;
             object-fit: cover;
             opacity: 0.6;
@@ -188,7 +145,7 @@
         }
 
         .slider img:hover {
-            opacity: 0.9; /* Reset opacity when hovered */
+            opacity: 1; /* Reset opacity when hovered */
         }
         
 
@@ -208,10 +165,53 @@
             border-radius: 50%;
             background-color: #fff;
             opacity: 0.75;
-            pointer-events: none;
             transition: opacity ease 250ms;
         }
 
         .slider-nav a:hover {
             opacity: 1;
+        }
+
+        h1, h2 {
+            color: var(--text-primary);
+            text-align: center;
+        }
+
+        /* Contain the glass item*/
+        .container_main {
+            position: absolute;
+            top: 45%; 
+            left: 77%;
+            transform: translate(-77%, -45%);
+            width: auto; 
+            height: auto;
+            max-width: 400rem;
+            z-index: 100; 
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* Make the box 'glass' alike trnasparant*/
+        .glass {
+            background: linear-gradient(135deg, rgba(2, 2, 2, 0.2), rgba(30, 31, 31, 0.1));
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border-radius: 20px;
+            border: 1px solid rgba(0, 0, 0, 0.4);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3), 
+                        inset 0 1px 3px rgba(255, 255, 255, 0.9);   
+        }
+
+
+        .contain-text {
+            text-align: center;
+            font-size: 13pt; /* Adjust the size as needed */
+            font-weight: bold; 
+            line-height: 1.5;
+            color: #fff;
+        }
+
+        .connect_text {
+            padding-top: 10rem;
         }
