--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Test{% endblock %}
+{% block title %}{% endblock %}
 
 {% block main %}    
 
@@ -23,9 +23,14 @@
 
         <div class="container_main glass">
             <div class="contain-text">
-                <h1 id="title"> How well do you know your <span style="color: #1DB954;"> Spotify </span><span style="color: #2C3E50;"> Playlist </span> </h1>
-            </div>
+                <h1 id="title"> Do you really know your <span style="color: #1DB954;"> Spotify </span><span style="color: #38526b;"> Playlist </span> </h1>
+            </div>f
         </div>
 
+        <div class="connect_text">
+            <h1> Connect you spotify and battle your friends </h1>
+
+            <h2>Find the missing lyrics !</h2>
+        </div>
 {% endblock %}
 
