--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <!-- Link font-awsome to use they're logos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Final project: {% block title %}{% endblock %}</title>
+    <title>Final project cs50x {% block title %}{% endblock %}</title>
 </head>
 
 <body>
