main page almost done

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,21 @@
             <h1 style="font-size: 50pt;"> FIND THE MISSING LYRICS </h1> 
 
             <hr style="width: 75%; border: 0; border-top: 2px solid rgba(115, 115, 115, 0.259); margin-top: 3rem;">
+
+            <div> Connect with spotify to access your library </div>
+
+                    
+            <div> A random song will start from you library and cut at some point</div>
+
+            
+            <div> Can you sing the part that was cut out</div>
+            
+
+
         </div>
+
+        
+
+
 {% endblock %}
 
