--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,8 +4,8 @@
             font-family: 'Montserrat';
             --text-primary: rgba(204, 184, 184, 0.7);
             --text-secondary: #5d9f80d3;
-            --bg-primary: rgba(2, 2, 2, 0.645);
-            --bg-secondary:  rgb(30, 31, 31);
+            --bg-primary:  #010409;
+            --bg-secondary:  #0D1117;
         }
 
         /* Set background color and remove default padding/nargin */
@@ -43,7 +43,7 @@
             width: 100vw;
             top: 0;
             position: fixed;
-            background-color: var(--bg-secondary);
+            background-color: var(--bg-primary);
             border-bottom: 0.1rem solid rgba(142, 142, 142, 0.33);
             box-sizing: border-box; /* Ensures the border is included in the total size */
             display: flex; 
@@ -119,7 +119,7 @@
             overflow: hidden;
             z-index: 1;
             /* border-bottom: 0.1rem solid rgba(142, 142, 142, 0.33); */
-            border: 1px solid rgba(0, 0, 0, 0.4);
+            border-bottom: 1px solid rgba(0, 0, 0, 0.4);
             box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3), 
                         inset 0 1px 3px rgba(255, 255, 255, 1);
         }
@@ -220,6 +220,7 @@
 
         #text_main_manual {
             margin-top: 12rem;
+            text-align: center;
         }
         
         #text_main_manual > h2 {
@@ -228,4 +229,8 @@
         
         #text_main_manual > h1, #text_main_manual > h2 {
             font-weight: bold;
+        }
+
+        #text_main_manual > div {
+            margin-top: 2rem;
         }
