--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link google Montserrat font-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Link css files -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <!-- Link js files-->
+     {% block head %}
+    {% endblock %}
+    <!-- Link icon for the tab from awesome-font -->
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/napster-brands.png') }}">
 
     <!-- Link font-awsome to use they're logos -->
