--- a/templates/index.html
+++ b/templates/index.html
@@ -29,47 +29,44 @@
             </div>
         </div>
         <div id="text_main_manual">
-            <h1 style="font-size: 50pt;"> FIND THE <span id="blur-text"><del>MISSING</del></span> LYRICSS </h1> 
+            <h1 style="font-size: 50pt;"> FIND THE <span id="blur-text"><del>MISSING</del></span> LYRICS </h1> 
 
             <hr style="width: 75%; border: 0; border-top: 2px solid rgba(115, 115, 115, 0.259); margin-top: 7rem;">
         </div>
 
         <!-- css card animation inpire of webtutorialsw/css_sliding_cards-->
-        <div class="wrapper">
-            <!-- Your existing cards layout -->
-            <div class="container">
-                <input type="radio" name="slide" id="c1" checked>
-                <label for="c1" class="card" style="background-image: url('{{ url_for('static', filename='images/connect_spotify.jpg') }}');">
-                    <div class="row">
-                        <div class="icon">1</div>
-                        <div class="description">
-                            <h4>Connection</h4>
-                            <p>Connect to your spotify account</p>
+        <div class="container_card_wrapper">
+            <div class="wrapper">
+                <div class="container">
+                    <input type="radio" name="slide" id="c1" checked>
+                    <label for="c1" class="card">
+                        <div class="row">
+                            <div class="description">
+                                <h4>Connect you account</h4>
+                                <p>Play with your songs</p>
+                            </div>
                         </div>
-                    </div>
-                </label>
-                <input type="radio" name="slide" id="c2">
-                <label for="c2" class="card" >
-                    <div class="row">
-                        <div class="icon">2</div>
-                        <div class="description">
-                            <h4>Choose</h4>
-                            <p>Select which playlists to play with</p>
+                    </label>
+                    <input type="radio" name="slide" id="c2" >
+                    <label for="c2" class="card">
+                        <div class="row">
+                            <div class="description">
+                                <h4>Make a choice</h4>
+                                <p> Choose playlist - pick a song </p>
+                            </div>
                         </div>
-                    </div>
-                </label>
-                <input type="radio" name="slide" id="c3">
-                <label for="c3" class="card" style="background-image: url('{{ url_for('static', filename='images/connect_spotify.jpg') }}');>
-                    <div class="row">
-                        <div class="icon">3</div>
-                        <div class="description">
-                            <h4>Sing</h4>
-                            <p>Sing or type the cut-out part</p>
+                    </label>
+                    <input type="radio" name="slide" id="c3">
+                    <label for="c3" class="card">
+                        <div class="row">
+                            <div class="description">
+                                <h4>Show off</h4>
+                                <p>You can sing or type the missing part</p>
+                            </div>
                         </div>
-                    </div>
-                </label>
+                    </label>
+                </div>
             </div>
         </div>
     
 {% endblock %}
-
